@@ -25,6 +25,7 @@ import org.hyperledger.besu.ethereum.api.query.TransactionWithMetadata;
 import org.hyperledger.besu.ethereum.core.BlockHeader;
 import org.hyperledger.besu.ethereum.core.Difficulty;
 import org.hyperledger.besu.ethereum.core.LogWithMetadata;
+import org.hyperledger.besu.ethereum.mainnet.ImmutableTransactionValidationParams;
 import org.hyperledger.besu.ethereum.mainnet.ProtocolSchedule;
 import org.hyperledger.besu.ethereum.mainnet.TransactionValidationParams;
 import org.hyperledger.besu.ethereum.rlp.BytesValueRLPOutput;
@@ -38,7 +39,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.function.Function;
 
 import com.google.common.primitives.Longs;
 import graphql.schema.DataFetchingEnvironment;
@@ -63,29 +64,29 @@ public class BlockAdapterBase extends AdapterBase {
     return block.map(NormalBlockAdapter::new);
   }
 
-  public Optional<Bytes32> getHash() {
-    return Optional.of(header.getHash());
+  public Bytes32 getHash() {
+    return header.getHash();
   }
 
-  public Optional<Bytes> getNonce() {
+  public Bytes getNonce() {
     final long nonce = header.getNonce();
     final byte[] bytes = Longs.toByteArray(nonce);
-    return Optional.of(Bytes.wrap(bytes));
+    return Bytes.wrap(bytes);
   }
 
-  public Optional<Bytes32> getTransactionsRoot() {
-    return Optional.of(header.getTransactionsRoot());
+  public Bytes32 getTransactionsRoot() {
+    return header.getTransactionsRoot();
   }
 
-  public Optional<Bytes32> getStateRoot() {
-    return Optional.of(header.getStateRoot());
+  public Bytes32 getStateRoot() {
+    return header.getStateRoot();
   }
 
-  public Optional<Bytes32> getReceiptsRoot() {
-    return Optional.of(header.getReceiptsRoot());
+  public Bytes32 getReceiptsRoot() {
+    return header.getReceiptsRoot();
   }
 
-  public Optional<AdapterBase> getMiner(final DataFetchingEnvironment environment) {
+  public AdapterBase getMiner(final DataFetchingEnvironment environment) {
 
     final BlockchainQueries query = getBlockchainQueries(environment);
     long blockNumber = header.getNumber();
@@ -97,60 +98,61 @@ public class BlockAdapterBase extends AdapterBase {
     return query
         .getAndMapWorldState(blockNumber, ws -> Optional.ofNullable(ws.get(header.getCoinbase())))
         .map(account -> (AdapterBase) new AccountAdapter(account))
-        .or(() -> Optional.of(new EmptyAccountAdapter(header.getCoinbase())));
+        .orElseGet(() -> new EmptyAccountAdapter(header.getCoinbase()));
   }
 
-  public Optional<Bytes> getExtraData() {
-    return Optional.of(header.getExtraData());
+  public Bytes getExtraData() {
+    return header.getExtraData();
   }
 
   public Optional<Wei> getBaseFeePerGas() {
     return header.getBaseFee();
   }
 
-  public Optional<Long> getGasLimit() {
-    return Optional.of(header.getGasLimit());
+  public Long getGasLimit() {
+    return header.getGasLimit();
   }
 
-  public Optional<Long> getGasUsed() {
-    return Optional.of(header.getGasUsed());
+  public Long getGasUsed() {
+    return header.getGasUsed();
   }
 
-  public Optional<Long> getTimestamp() {
-    return Optional.of(header.getTimestamp());
+  public Long getTimestamp() {
+    return header.getTimestamp();
   }
 
-  public Optional<Bytes> getLogsBloom() {
-    return Optional.of(header.getLogsBloom());
+  public Bytes getLogsBloom() {
+    return header.getLogsBloom();
   }
 
-  public Optional<Bytes32> getMixHash() {
-    return Optional.of(header.getMixHash());
+  public Bytes32 getMixHash() {
+    return header.getMixHash();
   }
 
-  public Optional<Difficulty> getDifficulty() {
-    return Optional.of(header.getDifficulty());
+  public Difficulty getDifficulty() {
+    return header.getDifficulty();
   }
 
-  public Optional<Bytes32> getOmmerHash() {
-    return Optional.of(header.getOmmersHash());
+  public Bytes32 getOmmerHash() {
+    return header.getOmmersHash();
   }
 
-  public Optional<Long> getNumber() {
-    final long bn = header.getNumber();
-    return Optional.of(bn);
+  public Long getNumber() {
+    return header.getNumber();
   }
 
-  public Optional<AccountAdapter> getAccount(final DataFetchingEnvironment environment) {
+  public AccountAdapter getAccount(final DataFetchingEnvironment environment) {
 
     final BlockchainQueries query = getBlockchainQueries(environment);
     final long bn = header.getNumber();
-    return query.getAndMapWorldState(
-        bn,
-        ws -> {
-          final Address address = environment.getArgument("address");
-          return Optional.of(new AccountAdapter(ws.get(address)));
-        });
+    return query
+        .getAndMapWorldState(
+            bn,
+            ws -> {
+              final Address address = environment.getArgument("address");
+              return Optional.of(new AccountAdapter(ws.get(address)));
+            })
+        .get();
   }
 
   public List<LogAdapter> getLogs(final DataFetchingEnvironment environment) {
@@ -167,7 +169,7 @@ public class BlockAdapterBase extends AdapterBase {
       if (topic.isEmpty()) {
         transformedTopics.add(Collections.singletonList(null));
       } else {
-        transformedTopics.add(topic.stream().map(LogTopic::of).collect(Collectors.toList()));
+        transformedTopics.add(topic.stream().map(LogTopic::of).toList());
       }
     }
     final LogsQuery query =
@@ -184,9 +186,9 @@ public class BlockAdapterBase extends AdapterBase {
     return results;
   }
 
-  public Optional<Long> getEstimateGas(final DataFetchingEnvironment environment) {
+  public Long getEstimateGas(final DataFetchingEnvironment environment) {
     final Optional<CallResult> result = executeCall(environment);
-    return result.map(CallResult::getGasUsed);
+    return result.map(CallResult::getGasUsed).orElse(0L);
   }
 
   public Optional<CallResult> getCall(final DataFetchingEnvironment environment) {
@@ -239,9 +241,14 @@ public class BlockAdapterBase extends AdapterBase {
             data,
             Optional.empty());
 
+    ImmutableTransactionValidationParams.Builder transactionValidationParams =
+        ImmutableTransactionValidationParams.builder()
+            .from(TransactionValidationParams.transactionSimulator());
+    transactionValidationParams.isAllowExceedingBalance(true);
+
     return transactionSimulator.process(
         param,
-        TransactionValidationParams.transactionSimulator(),
+        transactionValidationParams.build(),
         OperationTracer.NO_TRACING,
         (mutableWorldState, transactionSimulatorResult) ->
             transactionSimulatorResult.map(
@@ -255,13 +262,13 @@ public class BlockAdapterBase extends AdapterBase {
         header);
   }
 
-  Optional<Bytes> getRawHeader() {
+  Bytes getRawHeader() {
     final BytesValueRLPOutput rlpOutput = new BytesValueRLPOutput();
     header.writeTo(rlpOutput);
-    return Optional.of(rlpOutput.encoded());
+    return rlpOutput.encoded();
   }
 
-  Optional<Bytes> getRaw(final DataFetchingEnvironment environment) {
+  Bytes getRaw(final DataFetchingEnvironment environment) {
     final BlockchainQueries query = getBlockchainQueries(environment);
     return query
         .getBlockchain()
@@ -271,6 +278,23 @@ public class BlockAdapterBase extends AdapterBase {
               final BytesValueRLPOutput rlpOutput = new BytesValueRLPOutput();
               blockBody.writeWrappedBodyTo(rlpOutput);
               return rlpOutput.encoded();
-            });
+            })
+        .orElse(Bytes.EMPTY);
+  }
+
+  Optional<Bytes32> getWithdrawalsRoot() {
+    return header.getWithdrawalsRoot().map(Function.identity());
+  }
+
+  Optional<List<WithdrawalAdapter>> getWithdrawals(final DataFetchingEnvironment environment) {
+    final BlockchainQueries query = getBlockchainQueries(environment);
+    return query
+        .getBlockchain()
+        .getBlockBody(header.getBlockHash())
+        .flatMap(
+            blockBody ->
+                blockBody
+                    .getWithdrawals()
+                    .map(wl -> wl.stream().map(WithdrawalAdapter::new).toList()));
   }
 }
